[metadata]
name = autograd-lib
author = Yaroslav Bulatov, Kazuki Osawa
author_email = yaroslavvb@gmail.com
description= Library to simplify autograd computations in PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/cybertronai/autograd-lib
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
packages = find:
